--- a/app/components/List/styles.css
+++ b/app/components/List/styles.css
@@ -84,6 +84,9 @@
   .sticky{
     display: none;
   }
+  .mapContainer{
+    display: none;
+  }
   .item{
     flex-direction: column;
     justify-content: center;
